[tool.ruff]
extend-select = ["I", "TRY"]
ignore = ["E501"]

[tool.pytest.ini_options]
addopts = "--cov=httpx_oauth/ --cov-report=term-missing --cov-fail-under=100"
asyncio_mode = "auto"

[tool.hatch]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "regex_commit"
commit_extra_args = ["-e"]
path = "httpx_oauth/__init__.py"

[tool.hatch.envs.default]
dependencies = [
    "pytest",
    "ruff",
    "mkdocs",
    "mkdocs-material",
    "mypy",
    "pytest-cov",
    "pytest-mock",
    "markdown-include",
    "pygments",
    "pymdown-extensions",
    "pytest-asyncio",
    "respx",
    "fastapi",
]

[tool.hatch.envs.default.scripts]
test = "pytest"
test-cov-xml = "pytest --cov-report=xml"
lint = [
  "ruff format .",
  "ruff --fix .",
  "mypy httpx_oauth/",
]
lint-check = [
  "ruff format --check .",
  "ruff .",
  "mypy httpx_oauth/",
]
docs = "mkdocs serve"

[tool.hatch.build.targets.sdist]
support-legacy = true  # Create setup.py

[build-system]
requires = ["hatchling", "hatch-regex-commit"]
build-backend = "hatchling.build"

[project]
name = "httpx-oauth"
authors = [
  { name = "François Voron", email = "fvoron@gmail.com" }
]
description = "Async OAuth client using HTTPX"
readme = "README.md"
dynamic = ["version"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.8"
dependencies = [
    "httpx >=0.18,<0.27",
]

[project.urls]
Documentation = "https://frankie567.github.io/httpx-oauth/"
Source = "https://github.com/frankie567/httpx-oauth"
