[project]
name = "httpx-oauth"
authors = [
  { name = "Francois Voron", email = "fvoron@gmail.com" }
]
description = "Async OAuth client using HTTPX"
readme = "README.md"
dynamic = ["version"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.10"
dependencies = [
    "httpx >=0.18"
]

[project.urls]
Documentation = "https://frankie567.github.io/httpx-oauth/"
Source = "https://github.com/frankie567/httpx-oauth"

[build-system]
requires = ["hatchling", "hatch-regex-commit"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "regex_commit"
commit_extra_args = ["-e"]
path = "httpx_oauth/__init__.py"

[dependency-groups]
dev = [
    "mypy",
    "ruff",
    "pytest",
    "pytest-cov",
    "mkdocs-material",
    "mkdocstrings[python]",
    "griffe-inherited-docstrings",
    "pytest-asyncio",
    "respx",
    "fastapi",
    "pytest-mock",
]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
extend-select = ["I", "TRY", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
addopts = "--cov=httpx_oauth/ --cov-report=term-missing --cov-fail-under=100"
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

[tool.uv]
default-groups = ["dev"]

[tool.mypy]
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
strict_equality = true
disallow_untyped_defs = true

[tool.basedpyright]
typeCheckingMode = "off"
